K1J-515: Contact info should be saved for Answers as for messages (#351)